# nocc_fullstack_rootstock_supabase_v3

./: README.md  pyproject.toml
src/nocc_fullstack_rootstock_supabase_v2/: __init__.py  agents.py  crew.py  main.py  tasks.py  tools.py
src/nocc_fullstack_rootstock_supabase_v2/config/: agents.yaml  tasks.yaml
src/nocc_fullstack_rootstock_supabase_v2/tools/: __init__.py  custom_tool.py
src/nocc_fullstack_rootstock_supabase_v2/utils/: backend_helpers.py  frontend_helpers.py  rootstock_helpers.py
tests/: test_crew.py
