[tool.poetry]
name = "nocc_fullstack_rootstock_supabase_v2"
version = "0.1.0"
description = "nocc_fullstack_rootstock_supabase_v2 using crewAI"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "nocc_fullstack_rootstock_supabase_v2", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.63.6,<1.0.0" }


[tool.poetry.scripts]
nocc_fullstack_rootstock_supabase_v2 = "nocc_fullstack_rootstock_supabase_v2.main:run"
run_crew = "nocc_fullstack_rootstock_supabase_v2.main:run"
train = "nocc_fullstack_rootstock_supabase_v2.main:train"
replay = "nocc_fullstack_rootstock_supabase_v2.main:replay"
test = "nocc_fullstack_rootstock_supabase_v2.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
